option('examples', type: 'boolean', value: true, description: 'Build example applications')
option('renderers', type: 'array', choices: ['auto', 'gles2'], value: ['auto'], description: 'Select built-in renderers')
option('color-management', type: 'feature', value: 'auto', description: 'Enable support for color management')
option('tracy_enable', type: 'boolean', value: false, description: 'Enable profiling')
