wlr_files += files(
	'scene/subsurface_tree.c',
	'scene/surface.c',
	'scene/wlr_scene.c',
	'scene/output_layout.c',
	'scene/xdg_shell.c',
	'scene/layer_shell_v1.c',
	'buffer/buffer.c',
)

# Fx Renderer
wlr_files += files(
	'fx_renderer/matrix.c',
	'fx_renderer/fx_texture.c',
	'fx_renderer/fx_stencilbuffer.c',
	'fx_renderer/fx_renderer.c',
	'fx_renderer/fx_framebuffer.c',
)

subdir('fx_renderer/shaders')
